--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -639,7 +639,10 @@ a.more-link{
 						color: @color-white;
 						font-size: 1.2em;
 					}
-					h2{
+					h1{
+						font-size:34px;
+					}
+					h1,h2{
 						margin-top: 0px;
 						margin-bottom: 0px;
 						//width: 1140px;
