NOW-266 - Added meta descriptions to Panel pages

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1505,7 +1505,7 @@ a.more-link{
 			margin-bottom: 30px;
 		}
 	}
-	.panels-flexible-row-new-1{
+	.panels-flexible-row-last{
 		background: url('../images/background-two-colors.png') repeat-y 50%;
 		padding-bottom: 0px;
 		#hwc-practical-tool-menu-tools-form{
@@ -1777,6 +1777,10 @@ a.more-link{
 			}
 		}
 	}
+	.panels-flexible-row-first{
+		background:none !important;
+		padding-bottom:25px;
+	}
 }
 
 
@@ -1905,7 +1909,8 @@ a.more-link{
 		.container{
 			position: relative;
 		}
-		.panels-flexible-row-new-1{
+
+		.panels-flexible-row{
 			padding-top: 20px;
 			background-color: @color-primary-dark;
 			.container{
@@ -2002,6 +2007,10 @@ a.more-link{
 					content: "> ";
 				}
 			}
+		}
+		.panels-flexible-row-first{
+			background-color:transparent !important;
+			padding-top:0px;
 		}
 	}
 	.alert-success{
