NOW-377 - Group strategic documentation results by type and some fixes

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1782,8 +1782,6 @@ a.more-link{
 	}
 }
 
-
-
 /*END OIRA TOOLS*/
 
 
@@ -5310,6 +5308,18 @@ div[id ^= "mini-panel-partner_in_"], {
 					}
 					.count-container{
 						font-size: @font-size0-9;
+					}
+				}
+				.search-page-results-wrapper-grouped{
+					margin-bottom: 20px;
+				}
+				.search-page-results-wrapper-grouped-type-title{
+					background-color: @color-white;
+					padding: 10px 30px;
+					h2{
+						color: @color-text-purple-darker;
+						border-bottom: 2px solid @color-primary-dark;
+						padding-bottom:20px;
 					}
 				}
 				.search-page-results-wrapper{
