NOW-266, NOW-411, NOW-412 - Breadcrumbs and SEO meta tags updates

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2006,7 +2006,7 @@ a.more-link{
 			}
 		}
 		.panels-flexible-row-first{
-			background-color:transparent !impor;
+			background-color:transparent !important;
 			padding-top:0px;
 		}
 	}
