--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1789,7 +1789,8 @@ a.more-link{
 /*FAQ'S
 **************************************************************/
 
-.page-faq{
+.page-faq,
+.page-oira-faqs{ 
 	.panels-flexible-row-new-main-row{
 		.field-name-body{
 			font-size: @font-size1-4;
@@ -1800,7 +1801,8 @@ a.more-link{
 		background-color: @color-background-light-purple;
 		padding-top: 17px;
 		margin-bottom: 20px;
-		.view-id-faqs{
+		.view-id-faqs,
+		.view-id-faqs_oira{
 			.views-row-even{
 				border-bottom: 2px solid @color-text-purple;
 			}
@@ -1833,7 +1835,7 @@ a.more-link{
 					}
 					p, span, ul li{
 						font-family: "Roboto";
-						font-size: @font-size0-9 !important;
+						font-size: @font-size1-2 !important;
 						line-height: initial !important;
 						a{
 							text-decoration: underline;
