--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -20,33 +20,38 @@
 }
 //menu
 .menu-header{
-	#navbar{
-		.navbar-nav{
-			font-size: 0.95em;
-			li.first.leaf{
-				top: 0px;
-				a{
-					top: -2px;
-					img{
-						height: 18px;
+	.navbar-header-container{
+		padding-right: 1px;
+		padding-left: 1px;
+		#navbar{
+			.navbar-nav{
+				font-size: 0.85em;
+				li.first.leaf{
+					top: 0px;
+					a{
+						top: -2px;
+						img{
+							height: 18px;
+						}
 					}
 				}
-			}
-			&>li.first.leaf{
-				padding-right: 8px;
-    		}
-			li{
-				padding-left: 5px;
-    			padding-right: 5px;
-				.dropdown-menu{
-					top: 22px;
-					padding-top: 13px;
+				&>li.first.leaf{
+					padding-right: 4px;
+	    		}
+	    		li.expanded.dropdown{
+				    margin-top: 2px;
+				}
+				li{
+					padding-left: 5px;
+	    			padding-right: 5px;
+					.dropdown-menu{
+						top: 19px;
+						padding-top: 13px;
+					}
 				}
 			}
 		}
 	}
-	
-
 }
 /*END HEADER*/
 
