--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -95,43 +95,46 @@
 }
 /*END HEADER*/
 //menu
-.navbar-header {
-      float: none;
-}
-.navbar-left,.navbar-right {
-  float: none !important;
-}
-.navbar-toggle {
-  display: block;
-}
-.navbar-collapse {
-  border-top: 1px solid transparent;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-}
-.navbar-fixed-top {
-  top: 0;
-  border-width: 0 0 1px;
-}
-.navbar-collapse.collapse {
-  display: none!important;
-}
-.navbar-nav {
-  float: none!important;
-  margin-top: 7.5px;
-}
-.navbar-nav>li {
-  float: none;
-}
-.navbar-nav>li>a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.collapse.in{
-  display:block !important;
-}
-#navbar{
-	button.navbar-toggle{
-		float: left;
+header{
+	.navbar-header {
+	      float: none;
+	}
+	.navbar-left,.navbar-right {
+	  float: none !important;
+	}
+	.navbar-toggle {
+	  display: block;
+	}
+	.navbar-collapse {
+	  border-top: 1px solid transparent;
+	  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+	}
+	.navbar-fixed-top {
+	  top: 0;
+	  border-width: 0 0 1px;
+	}
+	.navbar-collapse.collapse {
+	  display: none!important;
+	}
+	.navbar-nav {
+	  float: none!important;
+	  margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+	  float: none;
+	  font-size: 1em !important;
+	}
+	.navbar-nav>li>a {
+	  padding-top: 10px;
+	  padding-bottom: 10px;
+	}
+	.collapse.in{
+	  display:block !important;
+	}
+	#navbar{
+		button.navbar-toggle{
+			float: left;
+		}
 	}
 }
 
@@ -242,7 +245,7 @@
 					box-shadow: 0 6px 12px rgba(0, 0, 0, 0);
 					margin-left: 20px;
 					margin-bottom: 10px;
-					top: 10px;
+					top: 0px !important;
     				li{
     					display: block !important;
     					border-right: none;
@@ -326,7 +329,7 @@
     margin: 0 auto;
     position: relative;
     display: block;
-    margin-top: -44px;
+    margin-top: -10px;
 	.breadcrumb{
 		background-color: inherit !important;
 		span, a{
