--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -191,7 +191,7 @@
 			display: inline-block;
 			margin-right: 10px;//firefox
 			max-width: 100px;
-			//visibility: hidden;
+			visibility: hidden;
 			.introduction-title{				
 				a{
 					display: block;
@@ -214,7 +214,7 @@
 		#block-lang-dropdown-language{
 			display: inline-block;
 			float: right;
-			//visibility: hidden;//only until finish private zone
+			visibility: hidden;//only until finish private zone
 			#lang-dropdown-select-language{
 				border: 2px solid @color-menu-icons;
     			outline: none;
