css changes - MDR-961

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1671,6 +1671,9 @@ a.more-link{
 							margin-left: 0px;
 							.col-sm-3{
 								padding-left: 0px;
+								img{
+									border: 1px solid grey;
+								}
 							}
 							.field-name-title-field{
 								font-size: @font-size1-4;
@@ -2121,6 +2124,11 @@ a.more-link{
 *************************************************************/
 .view-display-id-oshnews_list{
 	font-size: 16px;
+	.field-type-image{
+		img{
+			border: 1px solid grey;
+		}
+	}
 	.views-row-odd{
 		background-color: @color-primary;
 	}
@@ -2241,6 +2249,10 @@ a.more-link{
 		float: left;
 		margin-right: 30px;
 		margin-bottom: 20px;
+		width: 100%;
+		img{
+			border: 1px solid grey;
+		}
 	}
 	.group-content-wrapper.news-field-group{
 		overflow: hidden;
@@ -2733,6 +2745,11 @@ div[id ^= "mini-panel-partner_in_"], {
 			margin-right: -15px;
 		}
 		.quicktabs-views-group {
+			.col-sm-3{
+				img{
+					border: 1px solid grey;
+				}
+			}
 			.node-teaser{
 				border-bottom: 2px solid @color-text-purple;
 				padding-top: 30px;
@@ -3299,6 +3316,9 @@ div[id ^= "mini-panel-partner_in_"], {
 							margin-left: 0px;
 							.col-sm-3{
 								padding-left: 0px;
+								img{
+									border: 1px solid grey;
+								}
 							}
 							.group-center.col-md-12{
 								clear: both;
