--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6829,6 +6829,45 @@ button.close {
     display: none;
   }
 }
+/*Sticky menu
+****************************************/
+@media only screen and (min-width: 768px) {
+  .sticky-menu {
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    background-color: white;
+    top: 0px;
+  }
+  .sticky-menu .top-header {
+    margin-top: 10px !important;
+  }
+  .sticky-menu .header-blocks {
+    display: none;
+  }
+  .sticky-menu .header-sitename {
+    float: right;
+    width: auto;
+  }
+  .sticky-menu .header-sitename .oira-logo img {
+    width: 115px !important;
+  }
+  .sticky-menu .header-sitename .sitename {
+    display: none !important;
+  }
+  .sticky-menu .header-logo .logo {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .sticky-menu .header-logo .logo img {
+    width: 160px !important;
+  }
+  .sticky-menu .header-logo .eu-logo {
+    width: 55px !important;
+    margin-left: 15px !important;
+    margin-top: 16px !important;
+  }
+}
 /*MIXINS
 *****************************************/
 /*END MIXINS*/
