--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8245,7 +8245,7 @@ a.more-link:before {
   margin-bottom: 0px;
 }
 .page-oira-tools .panels-flexible-row-last #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column {
-  background-color: #786586;
+  background-color: #765e84;
   color: #ffffff;
   padding-right: 30px;
   padding-top: 30px;
@@ -9046,7 +9046,7 @@ a.more-link:before {
   min-height: 67px;
 }
 .page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-name-field {
-  margin: 30px 30px 30px 30px;
+  margin: 30px 30px 0px 30px;
 }
 .page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-name-field h2 {
   font-size: 2em;
@@ -9055,6 +9055,7 @@ a.more-link:before {
   color: #58585a;
   font-family: "Roboto";
   font-weight: bold;
+  min-height: 70px;
 }
 .page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-country-content-count {
   margin: 0px 30px 30px 30px;
@@ -9853,6 +9854,9 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+.page-promotional-resources .panels-flexible-row-page-promotional-materials-1 .promotional-introduction-item {
+  min-height: 470px;
+}
 .page-promotional-resources .panels-flexible-row-page-promotional-materials-1 .views-item-columns-container {
   margin-bottom: 15px;
   background-color: rgba(0, 0, 0, 0);
@@ -9889,7 +9893,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   margin-bottom: 0px;
 }
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-left-column {
-  background-color: #786586;
+  background-color: #765e84;
   color: #ffffff;
   padding-right: 30px;
   padding-top: 30px;
@@ -10420,7 +10424,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   margin-bottom: 0px;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-left-column {
-  background-color: #786586;
+  background-color: #765e84;
   color: #ffffff;
   padding-right: 30px;
   padding-top: 30px;
@@ -11837,7 +11841,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 }
 .oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child #edit-left-column,
 .oira-search-form-container #oira-strategic-documentation-partners-form div:first-child #edit-left-column {
-  background-color: #786586;
+  background-color: #765e84;
   color: #ffffff;
   padding-right: 30px;
   padding-top: 30px;
@@ -15565,6 +15569,9 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   }
   .page-oira-tools #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more {
     margin-left: 0px !important;
+  }
+  .page-oira-tools #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more a.more-link {
+    max-width: 171px;
   }
   .page-oira-tools #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-1 > div {
     margin-left: 0px !important;
