--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1673,6 +1673,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 						padding-bottom: 20px!important;
 						.field-name-tools-see-more {
     						margin-left: 0px !important;
+    						a.more-link{
+								max-width: 171px;
+							}
     					}
     					.related-partners-1 > div{
 							margin-left: 0px !important;
