css changes - MDR-931

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1513,7 +1513,7 @@ a.more-link{
 					margin-bottom: 0px;
 				}
 				#edit-left-column{
-					background-color: @color-primary-dark;
+					background-color: #765e84;
 					color: @color-white;
 					padding-right: 30px;
 					padding-top: 30px;
@@ -2313,13 +2313,14 @@ a.more-link{
 				}
 			}
 			.views-field-name-field{
-				margin: 30px 30px 30px 30px;
+				margin: 30px 30px 0px 30px;
 				h2{
 					font-size: @font-size2;
 					a{
 						color: @color-text-grey;
 						font-family: "Roboto";
 						font-weight: bold;
+						min-height: 70px;
 					}
 				}
 			}
@@ -3088,6 +3089,9 @@ div[id ^= "mini-panel-partner_in_"], {
 		background-color: @color-primary;
 		padding-top: 30px;
 		padding-bottom: 30px;
+		.promotional-introduction-item{
+			min-height: 470px;
+		}
 		.views-item-columns-container{
 			margin-bottom: 15px;
 			background-color: rgba(0,0,0,0);
@@ -3140,7 +3144,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					margin-bottom: 0px;
 				}
 				#edit-left-column{
-					background-color: @color-primary-dark;
+					background-color: #765e84;
 					color: @color-white;
 					padding-right: 30px;
 					padding-top: 30px;
@@ -3695,7 +3699,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					margin-bottom: 0px;
 				}
 				#edit-left-column{
-					background-color: @color-primary-dark;
+					background-color: #765e84;
 					color: @color-white;
 					padding-right: 30px;
 					padding-top: 30px;
@@ -5159,7 +5163,7 @@ div[id ^= "mini-panel-partner_in_"], {
 				margin-bottom: 0px;
 			}
 			#edit-left-column{
-				background-color: @color-primary-dark;
+				background-color: #765e84;
 				color: @color-white;
 				padding-right: 30px;
 				padding-top: 30px;
